# neural-mixture-guiding

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
common/assets/scenes/pbrt/veach-bidir-2/: scene.pbrt
common/cmake/: CompilePTX.cmake
common/configs/: mutable.json
common/configs/nn/: base.json
common/configs/render/: guided.json  interactive.json  pt_bsdf.json
common/configs/scenes/: veach-bidir.json
scripts/: derivatives.py  run.py  run_experiments.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/src/: CMakeLists.txt
src/backend/src/core/device/: atomic.h  context.cpp
src/backend/src/core/python/: py.cpp
src/backend/src/core/vulkan/: scene.cpp  shader.h
src/backend/src/render/passes/denoise/: denoise.cpp
src/backend/src/scene/: pbrt.cpp
src/backend/src/util/: film.h
src/main/: main.cpp
src/render/guided/: device.cu  distribution.h  guided.h  guideditem.h  guideditem.soa  integrator.cpp  integrator.h  network.h  parameters.h  train.cu  train.h  workqueue.h
